hphp/test/zend/good/Zend/tests/traits/conflict001.php.expectf

Fatal error: Method 'hello' declared in multiple traits (THello1, THello2) in %s/conflict001.php on line 16
